--- a/FiveSonsChess/app/src/main/res/layout/dialog_common.xml
+++ b/FiveSonsChess/app/src/main/res/layout/dialog_common.xml
@@ -62,22 +62,33 @@
         android:paddingTop="30dp"
         android:background="#ffffff"
         android:orientation="horizontal">
+
         <TextView
             android:id="@+id/tvName"
             android:layout_width="50dp"
             android:layout_height="40dp"
             android:layout_marginLeft="20dp"
             android:gravity="center"
-            android:textSize="18sp"
-            android:text="名称:"/>
-        <EditText
+            android:textSize="20sp"
+            android:text="棋盘:"/>
+
+        <Spinner
+            android:id="@+id/spinnerSize"
+            android:layout_width="match_parent"
+            android:layout_height="45dp"
+            android:layout_marginRight="40dp"
+            android:gravity="center"
+            android:entries="@array/spinner"
+            android:background="@drawable/selector_border"/>
+
+        <!--<EditText
             android:id="@+id/etName"
             android:layout_width="match_parent"
             android:layout_height="40dp"
             android:layout_marginLeft="10dp"
             android:layout_marginRight="40dp"
             android:singleLine="true"
-            android:background="@drawable/selector_border"/>
+            android:background="@drawable/selector_border"/>-->
     </LinearLayout>
 
     <!--cancel confirm-->
