perpare to add the model of AI

--- a/FiveSonsChess/app/src/main/res/layout/activity_main.xml
+++ b/FiveSonsChess/app/src/main/res/layout/activity_main.xml
@@ -90,6 +90,11 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="再来一局"/>
+            <Button
+                android:id="@+id/btnChangeModel"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="切换模式"/>
         </LinearLayout>
 
     </RelativeLayout>
