--- a/FiveSonsChess/app/src/main/res/layout/activity_number_game.xml
+++ b/FiveSonsChess/app/src/main/res/layout/activity_number_game.xml
@@ -1,8 +1,42 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:clipToPadding="true"
+    android:fitsSystemWindows="true"
     tools:context="com.lei.fivesonschess.NumberGameActivity">
 
-</RelativeLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="40dp"
+            android:layout_marginLeft="30dp"
+            android:layout_marginRight="20dp"
+            android:gravity="center"
+            android:text="Score:"/>
+        <TextView
+            android:id="@+id/tvScore"
+            android:layout_width="wrap_content"
+            android:layout_height="40dp"
+            android:gravity="center"
+            android:text="score"/>
+
+    </LinearLayout>
+
+    <com.lei.fivesonschess.game.NumberGame
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:background="#dddddd"
+        android:layout_weight="1">
+
+    </com.lei.fivesonschess.game.NumberGame>
+
+
+
+
+</LinearLayout>
